component builder for article.js completed and bugs squashed

--- a/css/index.css
+++ b/css/index.css
@@ -74,7 +74,8 @@
   background-color: white;
 }
 .article-open {
-  height: 400px;
+  height: auto;
+  overflow: visible;
 }
 .menu-button {
   position: absolute;
